force-app/main/default/objects/Racer_Position__c/Racer_Position__c.object-meta.xml
<CustomObject>
    <description>Racer position on championship</description>
    <label>Racer Position</label>
    <nameField>
        <label>Racer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Racer Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>