force-app/main/default/objects/Racer_Position__c/fields/Championship__c.field-meta.xml
<CustomField>
    <fullName>Championship__c</fullName>
    <description>Select championship</description>
    <inlineHelpText>Select championship</inlineHelpText>
    <label>Championship</label>
    <referenceTo>Championship__c</referenceTo>
    <relationshipLabel>Racer Positions</relationshipLabel>
    <relationshipName>Championship</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>