force-app/main/default/objects/Racer_Position__c/fields/Experience_in_championship_track__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_championship_track__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experience in championship track</label>
    <type>Checkbox</type>
</CustomField>