force-app/main/default/objects/Racer_Position__c/fields/Racer__c.field-meta.xml
<CustomField>
    <fullName>Racer__c</fullName>
    <description>Select racer</description>
    <inlineHelpText>Select racer</inlineHelpText>
    <label>Racer</label>
    <referenceTo>Racer__c</referenceTo>
    <relationshipLabel>Racer Positions</relationshipLabel>
    <relationshipName>Racer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>