force-app/main/default/objects/Racer_Position__c/fields/Starting_Position__c.field-meta.xml
<CustomField>
    <fullName>Starting_Position__c</fullName>
    <description>Starting position of the racer</description>
    <inlineHelpText>Set starting position</inlineHelpText>
    <label>Starting Position #</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>