force-app/main/default/objects/Racer_Position__c/validationRules/Expiration_date_of_the_Racer_contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_date_of_the_Racer_contract</fullName>
    <active>true</active>
    <description>A Racer cannot participate in the championship if the contract date has expired</description>
    <errorConditionFormula>Championship__r.Championship_Date__c  &gt;  Racer__r.Contact_End_Date__c</errorConditionFormula>
    <errorDisplayField>Championship__c</errorDisplayField>
    <errorMessage>Sorry, but Racer cannot be assigned for this Championship. Date of Championship is greater, than Racer contract End Date</errorMessage>
</ValidationRule>